Bug 296062 - Muon software center crash during a software installation
Summary: Muon software center crash during a software installation
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: installer (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 296783 296850 297061 297749 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-15 13:03 UTC by migliorellidavid
Modified: 2012-04-09 00:44 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.1
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (9.26 KB, text/plain)
2012-04-01 09:40 UTC, HughDaniel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description migliorellidavid 2012-03-15 13:03:18 UTC
Application: muon-installer (1.3.0 "Daring Dalek")
KDE Platform Version: 4.8.1 (4.8.1)
Qt Version: 4.8.0
Operating System: Linux 3.2.0-18-generic x86_64
Distribution: Ubuntu precise (development branch)

-- Information about the crash:
- What I was doing when the application crashed:

during a game installation i was browsering some application, than suddenly muon shut down

-- Backtrace:
Application: Muon Software Center (muon-installer), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f6b1430d780 (LWP 2976))]

Thread 4 (Thread 0x7f6afdc34700 (LWP 2979)):
#0  0x00007fffb49ff8de in ?? ()
#1  0x00007f6b0ceb515d in __GI_clock_gettime (clock_id=<optimized out>, tp=<optimized out>) at ../sysdeps/unix/clock_gettime.c:116
#2  0x00007f6b11c9d654 in do_gettime (frac=0x7f6afdc33b98, sec=0x7f6afdc33b90) at tools/qelapsedtimer_unix.cpp:123
#3  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#4  0x00007f6b11d751dd in QTimerInfoList::updateCurrentTime (this=0x7f6af8002860) at kernel/qeventdispatcher_unix.cpp:343
#5  0x00007f6b11d75513 in QTimerInfoList::timerWait (this=0x7f6af8002860, tm=...) at kernel/qeventdispatcher_unix.cpp:450
#6  0x00007f6b11d73fcc in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7f6afdc33c6c) at kernel/qeventdispatcher_glib.cpp:136
#7  0x00007f6b11d74075 in timerSourcePrepare (source=<optimized out>, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#8  0x00007f6b0b65185e in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#9  0x00007f6b0b65205b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#10 0x00007f6b0b652264 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#11 0x00007f6b11d74a76 in QEventDispatcherGlib::processEvents (this=0x7f6af80008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#12 0x00007f6b11d442d2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#13 0x00007f6b11d44527 in QEventLoop::exec (this=0x7f6afdc33dd0, flags=...) at kernel/qeventloop.cpp:204
#14 0x00007f6b11c43f97 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#15 0x00007f6b11d2406f in QInotifyFileSystemWatcherEngine::run (this=0x1608b90) at io/qfilesystemwatcher_inotify.cpp:248
#16 0x00007f6b11c46fbb in QThreadPrivate::start (arg=0x1608b90) at thread/qthread_unix.cpp:298
#17 0x00007f6b0bd0ee9a in start_thread (arg=0x7f6afdc34700) at pthread_create.c:308
#18 0x00007f6b1093274d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#19 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f6afcb82700 (LWP 2990)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f6b0dac8212 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007f6b0dac8249 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007f6b0bd0ee9a in start_thread (arg=0x7f6afcb82700) at pthread_create.c:308
#4  0x00007f6b1093274d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f6af4eff700 (LWP 2992)):
#0  0x00007f6b0b65184e in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f6b0b65205b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f6b0b652264 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f6b11d74a76 in QEventDispatcherGlib::processEvents (this=0x7f6ae80008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f6b11d442d2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f6b11d44527 in QEventLoop::exec (this=0x7f6af4efee00, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f6b11c43f97 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007f6b11c46fbb in QThreadPrivate::start (arg=0x7f6af0003160) at thread/qthread_unix.cpp:298
#8  0x00007f6b0bd0ee9a in start_thread (arg=0x7f6af4eff700) at pthread_create.c:308
#9  0x00007f6b1093274d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f6b1430d780 (LWP 2976)):
[KCrash Handler]
#6  0x0000000000000000 in ?? ()
#7  0x00007f6b11d59154 in QObject::disconnect (sender=0x33ec240, signal=0x33f99f9 "result(KJob*)", receiver=0x14a3d70, method=0x1633719 "changelogFetched(KJob*)") at kernel/qobject.cpp:2891
#8  0x0000000000440406 in ReviewsBackend::stopPendingJobs (this=0x14a3d70) at /build/buildd/muon-1.3.0/installer/ReviewsBackend/ReviewsBackend.cpp:142
#9  0x0000000000422e64 in ApplicationBackend::reload (this=0x13fefa0) at /build/buildd/muon-1.3.0/installer/ApplicationBackend.cpp:125
#10 0x00000000004230b5 in ApplicationBackend::workerEvent (this=0x13fefa0, event=<optimized out>) at /build/buildd/muon-1.3.0/installer/ApplicationBackend.cpp:193
#11 0x00007f6b11d598d1 in QMetaObject::activate (sender=0x1377f90, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffb4802910) at kernel/qobject.cpp:3547
#12 0x00007f6b1383a9e1 in QApt::Backend::workerEvent (this=<optimized out>, _t1=QApt::CommitChangesFinished) at /build/buildd/qapt-1.3.0/obj-x86_64-linux-gnu/src/moc_backend.cxx:265
#13 0x00007f6b11d598d1 in QMetaObject::activate (sender=0x13d33d0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffb4802a60) at kernel/qobject.cpp:3547
#14 0x00007f6b1383b9a1 in OrgKubuntuQaptworkerInterface::workerEvent (this=<optimized out>, _t1=6) at /build/buildd/qapt-1.3.0/obj-x86_64-linux-gnu/src/workerdbus.moc:242
#15 0x00007f6b1383c636 in OrgKubuntuQaptworkerInterface::qt_static_metacall (_o=0x13d33d0, _c=<optimized out>, _id=8, _a=0x7fffb4802f90) at /build/buildd/qapt-1.3.0/obj-x86_64-linux-gnu/src/workerdbus.moc:108
#16 0x00007f6b1383d15b in OrgKubuntuQaptworkerInterface::qt_metacall (this=0x13d33d0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffb4802f90) at /build/buildd/qapt-1.3.0/obj-x86_64-linux-gnu/src/workerdbus.moc:176
#17 0x00007f6b1008437b in QDBusConnectionPrivate::deliverCall (this=0x148ae30, object=0x13d33d0, msg=..., metaTypes=..., slotIdx=13) at qdbusintegrator.cpp:947
#18 0x00007f6b11d5ea96 in QObject::event (this=0x13d33d0, e=<optimized out>) at kernel/qobject.cpp:1195
#19 0x00007f6b110c86b4 in notify_helper (e=0x1638360, receiver=0x13d33d0, this=0x1289490) at kernel/qapplication.cpp:4555
#20 QApplicationPrivate::notify_helper (this=0x1289490, receiver=0x13d33d0, e=0x1638360) at kernel/qapplication.cpp:4527
#21 0x00007f6b110cd533 in QApplication::notify (this=0x7fffb4803990, receiver=0x13d33d0, e=0x1638360) at kernel/qapplication.cpp:4416
#22 0x00007f6b127a5906 in KApplication::notify (this=0x7fffb4803990, receiver=0x13d33d0, event=0x1638360) at ../../kdeui/kernel/kapplication.cpp:311
#23 0x00007f6b11d454ec in QCoreApplication::notifyInternal (this=0x7fffb4803990, receiver=0x13d33d0, event=0x1638360) at kernel/qcoreapplication.cpp:876
#24 0x00007f6b11d492ba in sendEvent (event=0x1638360, receiver=0x13d33d0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#25 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x12577a0) at kernel/qcoreapplication.cpp:1500
#26 0x00007f6b11d745e3 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#27 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:279
#28 0x00007f6b0b651dda in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007f6b0b6521a0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007f6b0b652264 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007f6b11d74a0f in QEventDispatcherGlib::processEvents (this=0x1259080, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#32 0x00007f6b11170aae in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#33 0x00007f6b11d442d2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#34 0x00007f6b11d44527 in QEventLoop::exec (this=0x7fffb4803920, flags=...) at kernel/qeventloop.cpp:204
#35 0x00007f6b11d495b7 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#36 0x000000000041dc97 in main (argc=5, argv=0x7fffb4803c08) at /build/buildd/muon-1.3.0/installer/main.cpp:61

Reported using DrKonqi
Comment 1 Jonathan Thomas 2012-03-17 19:29:22 UTC
Git commit 2d80a55592139d6c90fe7bf209608f8e505aa0d2 by Jonathan Thomas.
Committed on 17/03/2012 at 20:22.
Pushed by jmthomas into branch 'master'.

Remember to remove failed fetch jobs from our temporary records, or else we crash when trying to clean up already-deleted jobs later.
FIXED-IN:1.3.1

M  +2    -0    libmuon/ReviewsBackend/ReviewsBackend.cpp
M  +3    -1    muon/DetailsTabs/ChangelogTab.cpp

http://commits.kde.org/muon/2d80a55592139d6c90fe7bf209608f8e505aa0d2
Comment 2 Jonathan Thomas 2012-03-25 23:04:23 UTC
*** Bug 296783 has been marked as a duplicate of this bug. ***
Comment 3 Jonathan Thomas 2012-03-27 01:44:01 UTC
*** Bug 296850 has been marked as a duplicate of this bug. ***
Comment 4 Jonathan Thomas 2012-03-29 17:37:27 UTC
*** Bug 297061 has been marked as a duplicate of this bug. ***
Comment 5 HughDaniel 2012-04-01 09:40:24 UTC
Created attachment 70051 [details]
New crash information added by DrKonqi

muon-installer (1.3.0 "Daring Dalek") on KDE Platform 4.8.1 (4.8.1) using Qt 4.8.0

- What I was doing when the application crashed:

There were a couple of installs running in the background so it's hard to tell what crashed, but I was just clicking around in the GUI and boom.  From the look of the stack it's this bug, but am I running the fixed version or is this still a problem?

-- Backtrace (Reduced):
#7  0x00007f4baeb5e174 in QObject::disconnect (sender=0x34c03c0, signal=0x330cad9 "result(KJob*)", receiver=0xdbd8e0, method=0x33ee009 "changelogFetched(KJob*)") at kernel/qobject.cpp:2891
#8  0x0000000000440406 in ReviewsBackend::stopPendingJobs (this=0xdbd8e0) at /build/buildd/muon-1.3.0/installer/ReviewsBackend/ReviewsBackend.cpp:142
#9  0x0000000000422e64 in ApplicationBackend::reload (this=0xdc7910) at /build/buildd/muon-1.3.0/installer/ApplicationBackend.cpp:125
#10 0x00000000004230b5 in ApplicationBackend::workerEvent (this=0xdc7910, event=<optimized out>) at /build/buildd/muon-1.3.0/installer/ApplicationBackend.cpp:193
[...]
#12 0x00007f4bb063f9e1 in QApt::Backend::workerEvent (this=<optimized out>, _t1=QApt::CommitChangesFinished) at /build/buildd/qapt-1.3.0/obj-x86_64-linux-gnu/src/moc_backend.cxx:265
Comment 6 Jonathan Thomas 2012-04-09 00:44:40 UTC
*** Bug 297749 has been marked as a duplicate of this bug. ***