Remember to remove failed fetch jobs from our temporary records, or else we crash when trying to clean up already-deleted jobs later.

BUG:296062
FIXED-IN:1.3.1