libmuon/ReviewsBackend/ReviewsBackend.cpp
@@ -211,6 +211,7 @@ void ReviewsBackend::fetchReviews(Application *app, int page)
 void ReviewsBackend::reviewsFetched(KJob *job)
 {
     if (job->error()) {
+        m_jobHash.remove(job);
         return;
     }
 
@@ -224,6 +225,7 @@ void ReviewsBackend::reviewsFetched(KJob *job)
     QVariant reviews = parser.parse(json, &ok);
 
     if (!ok) {
+        m_jobHash.remove(job);
         return;
     }
 
